# h5RDMtoolbox

./: .build.bat  .coveragerc  .gitignore  .pylintrc  .readthedocs.yml  CHANGELOG.md  CITATION.cff  LICENSE  PLANNED_CHANGES.md  README.md  TODO.md  codemeta.json  git-analysis-with-sonar.py  h5rdmtoolbox_cli.py  h5tbx.pylint  pyproject.toml  requirements-dev.txt  requirements-doc.txt  requirements-readthedocs.txt  requirements.txt  run_tests_under_windows.bat  setup.cfg  test.hdf  test.pickle  test.yml  tox.ini  tutorial_convention.yaml
.github/workflows/: coverage.yml  doc_pages.yml  tests.yml
dev/: README.md  _test_convention_vfuncs.py  main.py  new_validators.py  test_convention.yaml  utils.py  validator_types.py
dev/test_convention/: convention.py  special_type_funcs.py
doc/: README.md  conf.py  index.rst
doc/conventions/: conventions.ipynb  index.rst  layouts.ipynb  tutorials.rst
doc/gettingstarted/: motivation.rst  quickoverview.ipynb
doc/glossary/: index.rst
doc/h5database/: example.ipynb  tutorials.rst
doc/h5wrapper/: Basics.ipynb  CreateNewWrapper.ipynb  GettingStarted.ipynb  H5Flow.ipynb  H5PIV.ipynb  H5PIVuncertainty.ipynb  InheritanceAndAccessors.ipynb  NaturalNaming.ipynb  SpecialAttributes.ipynb  SpecializedWrappers.ipynb  index.rst  overview.rst  tutorials.rst
doc/x2hdf/: index.rst  piv2hdf.ipynb  tutorials.rst
docs/: .buildinfo  README.md  api.rst  conf.py  faq.rst  genindex.html  index.html  index.rst  make.bat  objects.inv  references.bib  references.html  references.rst  search.html  searchindex.js
docs/_sources/: index.rst.txt  references.rst.txt
docs/beyond/: Validation-with-SHACL.ipynb
docs/colab/: example.hdf  my_file.json  quickstart.ipynb
docs/convention/: example_convention.json  index.rst  ontologies.ipynb  piv_specific.yaml  standard_attributes_and_conventions.ipynb  units-convention.yaml
docs/conventions/: EngMeta.ipynb  Example.ipynb  Provenance.ipynb  Untitled.ipynb  cflike.ipynb  conventions.html  conventions.ipynb  conventions_and_standard_attributes.ipynb  default.ipynb  example_convention.yaml  index.html  index.rst  introduction_to_validators.ipynb  layouts.html  layouts.ipynb  layouts_old.ipynb  ontologies.ipynb  piv_specific.yaml  standard_attributes.ipynb  standard_attributes_and_conventions.ipynb  standard_name_convention.ipynb  standard_name_interface.ipynb  std_attr_from_yaml.ipynb  tbx.ipynb  tbx_convention_standard_names.yaml  test.yaml
docs/database/: Serverless.html  Serverless.ipynb  firstSteps.ipynb  h5mongo.html  h5mongo.ipynb  hdfDB.ipynb  index.html  index.rst  mongo.ipynb
docs/faq/: faq001.ipynb  faq006.ipynb  index.rst
docs/gettingstarted/: command_line_interface.html  command_line_interface.rst  index.html  index.rst  installation.rst  motivation.html  motivation.rst  quickoverview.html  quickoverview.ipynb  tutorial_convention.yaml
docs/glossary/: index.html  index.rst
docs/h5database/: Serverless.html  Serverless.ipynb  example.html  example.ipynb  filequery.html  filequery.ipynb  h5mongo.html  h5mongo.ipynb  index.html  index.rst
docs/h5wrapper/: Basics.html  Conventions.html  Conventions.ipynb  CreateFile.html  CreateFile.ipynb  DatasetCreation.html  DatasetCreation.ipynb  DatasetSlicing.html  Extensions.html  Extensions.ipynb  FileExploration.html  FileExploration.ipynb  GroupCreation.html  GroupCreation.ipynb  InheritanceAndAccessors.html  InheritanceAndAccessors.ipynb  NaturalNaming.html  NaturalNaming.ipynb  SpecialAttributes.html  SpecialIO.html  SpecializedWrappers.html  SpecializedWrappers.ipynb  Visualization.html  index.html  index.rst  known_issues.html  tec.mcr
docs/howto/: howto.html  howto.ipynb  ht001.ipynb  ht002.ipynb  ht003.ipynb  ht004.ipynb  ht005.ipynb  ht006.ipynb  index.rst
docs/layout/: getting_started.ipynb  index.rst  layouts.ipynb
docs/practical_examples/: h5m4i.py  index.rst  knowledge_graph.ipynb  m4iPIV.ipynb  m4iPIV_final.ipynb  metadata4ing.ipynb  min_m4i_ex.jsonld  multiple_parameters.json  nexus.ipynb  photon_hdf5.ipynb  piv.jsonld  tmp.grpah.html
docs/repository/: index.rst  zenodo.ipynb
docs/userguide/: hdf_meta.jsonld  index.rst
docs/wrapper/: Conventions.html  CreateFile.html  CreateFile.ipynb  DatasetCreation.html  DatasetCreation.ipynb  DatasetSlicing.html  DatasetSlicing.ipynb  DumpFile.html  DumpFile.ipynb  Extensions.html  Extensions.ipynb  FileExploration.html  GroupCreation.html  GroupCreation.ipynb  Misc.ipynb  NaturalNaming.html  NaturalNaming.ipynb  SpecialAttributes.html  SpecialIO.html  SpecialIO.ipynb  SpecializedWrappers.html  SpecializedWrappers.ipynb  Visualization.html  Visualization.ipynb  index.html  index.rst  known_issues.html  known_issues.ipynb  test.hdf
docs/x2hdf/: cfx2hdf.html  cfx2hdf.ipynb  index.html  index.rst  piv2hdf.html  piv2hdf.ipynb  test
gui/: fairify.py
gui/src/: README.md
h5rdmtoolbox/: __init__.py  _cfg.py  _cli.py  _config.py  _logger.py  _repr.py  _user.py  _version.py  cache.py  cli.py  config.py  consts.py  errors.py  hdfgui.py  identifiers.py  iri.py  namespace.py  orcid.py  package_attr_names.py  plotting.py  protected_attributes.py  protocols.py  server.py  so_convention.py  tbx_convention.py  tbx_convention_depr.py  tutorial.py  user.py  utils.py  warnings.py
h5rdmtoolbox/catalog/: __init__.py  _initialization.py  abstracts.py  core.py  profiles.py  query_templates.py  stores.py  utils.py
h5rdmtoolbox/convention/: README.md  __init__.py  _h5tbx.py  _m4i_namespace.py  _obo_namespace.py  cfg.py  consts.py  core.py  definition.py  errors.py  generate.py  generate_utils.py  hdf_ontology.py  metadata.py  namespace.py  rdf.py  references.py  utils.py  (+3 more)
scratch/: fix_zenodo.ipynb  scratch_rdflib_jsonld.ipynb
tests/: README.md  clean_zenodo_sandbox.py  cleanup.py  conftest.py  requirements.txt  requirements_test.txt  run_test.bat  test_cli.py  test_config.py  test_extensions.py  test_identifiers.py  test_logger.py  test_orcid.py  test_plotting.py  test_potting.py  test_readme.py  test_repr.py  test_server.py  test_user.py  test_utils.py  test_version.py  test_xarray_export.py
(+673 files in other folders)
