[metadata]
name = h5rdmtoolbox
version = 1.4.0a1
author = Matthias Probst
author_email = matthias.probst@kit.edu
description = Supporting a FAIR Research Data lifecycle using Python and HDF5.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://h5rdmtoolbox.readthedocs.io/en/latest/
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Topic :: Scientific/Engineering

[options]
packages = find:
python_requires = >=3.8, <3.13
include_package_data = True
install_requires =
    appdirs >= 1.4.4
    importlib_resources
    numpy >= 1.20, < 2.0.0  # 2.0.0 fails with pint
    h5py > 3.7.0
    matplotlib >= 3.5.2
    IPython >= 7.34.0  # colab wants 7.34.0
    pyyaml > 6.0  # 5.4 does not work with python 3.11!
    xarray >= 2022.3.0
    pint == 0.21.1  # pint >= 0.19.2<0.22.0 Note: 0.22.0 shows bad str-output for quantities with format Lx~
    pint_xarray # >= 0.2.1
    regex # >= 2023
    packaging
    ontolutils>=0.2.20
    python-forge # == 18.6.0
    requests
    pydantic >= 2.3.0
    rdflib

[options.extras_require]
database=
    pymongo # >= 4.2.0
layout_validation=
    tabulate
csv =
    pandas # >= 1.4.3
snt =
    xmltodict
    tabulate # >= 0.8.10
    python-gitlab
    pypandoc # >= 1.11
gui =
    PyQt5
test =
    pytest >= 7.1.2
    pytest-cov
    pylint
    mongomock
    xmltodict
    scipy  # provides netcdf4
    %(csv)s
    %(snt)s
    %(database)s
docs =
    %(csv)s
    %(snt)s
    %(database)s
    %(test)s
    jupyterlab
    Sphinx >= 3,<5
    sphinx_book_theme == 0.3.3
    sphinx-copybutton
    scikit-image
    scikit-learn
;    nbsphinx
    sphinx-design
    simplejson
    myst-nb
    sphinxcontrib-bibtex
    
complete =
    %(layout_validation)s
    %(gui)s
    %(test)s
    %(docs)s

[options.package_data]
h5rdmtoolbox =
    data/*.yaml
    data/*.yml
    data/*.png
    data/TbxLayout.hdf
    data/EmptyLayout.hdf
    data/style.css
    tests/data/*
    conventions/html/template.html

[tool:pytest]
python_files = test_*.py
testpaths = tests


[options.entry_points]
console_scripts =
    h5tbx = h5rdmtoolbox.cli:main