[metadata]
name = h5rdmtoolbox
version = 2.4.0
author = Matthias Probst
author_email = matth.probst@gmail.com
description = Supporting a FAIR Research Data lifecycle using Python and HDF5.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://h5rdmtoolbox.readthedocs.io/en/latest/
classifiers =
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Topic :: Scientific/Engineering

[options]
packages = find:
python_requires = >=3.9, <3.14
include_package_data = True
install_requires =
    appdirs~=1.4
    importlib_resources>=6.5.2, <7.0.0
    numpy >= 1.20, < 3.0.0  # 2.0.0 fails with pint==0.21.1
    h5py~=3.8
    matplotlib >= 3.5.2
    IPython >= 7.34.0  # colab wants 7.34.0
    pyyaml >= 6.0  # 5.4 does not work with python 3.11!
    xarray >= 2022.3.0
    pint>=0.24.4  # pint >= 0.19.2<0.22.0 Note: 0.22.0 shows bad str-output for quantities with format Lx~
    pint_xarray >= 0.2.1, <=0.6.0
    regex>=2020.7.9
    packaging>=24.1
    ontolutils>=0.21.0,<1.0.0
    python-forge==18.6.0
    requests>=2.32.4
    pydantic~=2.8
    rdflib~=7.1
    click==8.1.7

[options.extras_require]
database=
    pymongo>=4.2.0,<=4.10.1
layout_validation=
    tabulate>=0.8.10,<=0.9.0
csv =
    pandas >= 1.4.3
snt =
    xmltodict<=0.13.0
    tabulate>=0.8.10,<=0.9.0
    python-gitlab
    pypandoc >= 1.11
gui =
    PyQt5==5.15.10
test =
    pytest>=8.3.3
    pytest-cov>=5.0.0
    pylint
;     ssnolib>=1.5.1.4
    ssnolib @ git+https://github.com/matthiasprobst/ssnolib@develop
    mongomock==4.1.2
    xmltodict<=0.13.0
    scipy>=1.10.1  # provides netcdf4
    scikit-image>=0.21.0
    scikit-learn
    %(csv)s
    %(snt)s
    %(database)s
docs =
    %(csv)s
    %(snt)s
    %(database)s
    %(test)s
    Sphinx==8.0.0
    sphinx_book_theme==1.1.3
    sphinx-copybutton==0.5.2
    sphinx-design==0.6.1
    myst-nb==1.2.0
    sphinxcontrib-bibtex==2.6.3
    scikit-image>=0.21.0
    scikit-learn

complete =
    %(layout_validation)s
    %(gui)s
    %(test)s

complete-with-docs =
    %(complete)s
    %(docs)s

[options.package_data]
h5rdmtoolbox =
    data/*.yaml
    data/*.yml
    data/*.png
    data/TbxLayout.hdf
    data/EmptyLayout.hdf
    data/style.css
    tests/data/*
    conventions/html/template.html

[tool:pytest]
python_files = test_*.py
testpaths = tests


[options.entry_points]
console_scripts =
    h5tbx = h5rdmtoolbox.cli:h5tbx